# chocofarm

./: .clang-tidy  .clangd  .gitignore  BACKLOG.md  CLAUDE.md  analyzer.py  arrangement.py  build_faces_ggb.py  chocobo_faces.ggb  chocobo_geometry.py  chocobo_stage2_approx.py  decomp_solver.py  env.py  eval_decomp.py  eval_faces.py  eval_ismcts.py  eval_nmcs.py  facemodel.py  het_values_eval.py  ismcts.py  nmcs.py  policies.py  pyproject.toml  run.py  synthetic.py  tb_runner.py  verify_faces.py
attic/: chocobo_baseline_sparse.py  chocobo_belief_closure.py  chocobo_measure.py  chocobo_measure_bitset.py  chocobo_stage1.py  experiments.py
chocofarm/: config.py  references.py
chocofarm/analysis/: analyzer.py  synthetic.py
chocofarm/az/: actions.py  actor_config.py  actor_transport.py  control_spec.py  cpp_actor_loop.py  cpp_executor.py  dataset.py  dtypes.py  exit_loop.py  feature_response.py  features.py  forward.py  gumbel_search.py  inference_server.py  inference_wire.py  kernels.py  lowlatency.py  mlp.py  mlp_jax.py  mlp_jax_train.py  net_port.py  netvalue_ismcts.py  optimizer.py  parallel.py  result_spec.py  train_value.py  transport.py  value_target.py  weights.py  wire_spec.py  worker.py  worker_pool.py  zmq_net_client.py
chocofarm/bounds/: eval_bound.py  info_relaxation.py  minienv.py  vhats.py  vhats_decomp.py  vhats_exact.py
chocofarm/data/: faces.json  feature_layout.json  instance.json
chocofarm/eval/: eval_az.py  eval_decomp.py  (+7 more)
cpp/: CMakeLists.txt  Doxyfile  README.md
cpp/include/chocofarm/: actor_config.hpp  batch_predict.hpp  belief_bitset_ops.hpp  belief_key.hpp  belief_zdd_engine.hpp  collected_set.hpp  control_spec.hpp  cyclic_gumbel.hpp  domains.hpp  env.hpp  error.hpp  event_log.hpp  feature_compute.hpp  feature_layout.hpp  features.hpp  fiber_leaf.hpp  fiber_tree.hpp  gumbel.hpp  gumbel_cursor.hpp  inference_wire.hpp  instance.hpp  ismcts.hpp  issue_control_bridge.hpp  issue_controller.hpp  lab_control_wire.hpp  net.hpp  net_evaluator.hpp  nmcs.hpp  policy.hpp  quantity.hpp  releasing_arena.hpp  result_spec.hpp  runner.hpp  runner_wire_batched.hpp  runtime_config.hpp  search_runtime.hpp  serve.hpp  transport.hpp  wire_leaf_pool.hpp  wire_spec.hpp  (+2 more)
cpp/parity/: _wire_smoke_server.py  gumbel_logic.py  gumbel_no_early_exit.py  gumbel_precision.py  ismcts_logic.py  ismcts_multiworld.py  ismcts_parity.py  jax_matmul_featurization.py  net_parity.py  nmcs_logic.py  nmcs_parity.py  parity.py  quantity_elision_ab.cpp  quantity_elision_check.cmake  wire_bench.py  wire_golden.cpp
cpp/probe/: belief_zdd.cpp  belief_zdd.hpp
cpp/src/: actor_config.cpp  batch_predict.cpp  batch_predict_bench.cpp  batched_featurization_proto.cpp  belief_cache_check.cpp  belief_features_export.cpp  belief_filter_bench.cpp  belief_sweep_bench.cpp  belief_sweep_oracle_check.cpp  belief_zdd_engine.cpp  belief_zdd_probe.cpp  dealer_probe.cpp  env.cpp  env_zdd.cpp  feature_layout.cpp  features.cpp  fiber_proto.cpp  gumbel.cpp  gumbel_cursor.cpp  gumbel_cursor_proto.cpp  gumbel_dump.cpp  instance.cpp  ismcts.cpp  ismcts_dump.cpp  local_mlp_bench.cpp  main.cpp  mask_dump.cpp  multiplexed_producer_compute_bench.cpp  net.cpp  net_dump.cpp  nmcs.cpp  nmcs_dump.cpp  policy.cpp  runner.cpp  runner_wire_batched.cpp  search_runtime.cpp  search_runtime_bench.cpp  serial_runtime_check.cpp  serve.cpp  stage_a_transport_bench.cpp  (+9 more)
cpp/stage_a/: issue_engine.py  overcommit_sweep.py  server_gen_floor_grid.py  stage_a_analyze.py  stage_a_server.py  stage_a_sweep.py  stage_b_ab.py
cpp/stage_a/control_lab/: __init__.py  adapter.py  bench_trajectory_codec.py  lab_harness.py  lab_server.py  lab_store.py  lab_wire.py  offline_awr_train.py  reference_methods.py  trajectory_codec.py  watchdog.py
cpp/stage_a/control_lab/methods/: __init__.py  a2c.py  backpressure.py  bang_bang.py  contextual_bandit.py  dual_coalescing.py  independent_bandit.py  offline_awr.py  reinforce.py  spsa_threshold.py  tabular_q.py  threshold_bandit.py  token_bucket.py  vegas.py  whittle_rmab.py
docs/: STATUS.md  adr-synopsis.md  handoff-2026-06-15-architecture-refactor.md  handoff-2026-06-15.md  handoff-2026-06-16-zmq-async-gumbel.md  operations.md
scripts/: build_faces_ggb.py  chocobo_geometry.py  verify_faces.py
tests/: test_actor_transport.py  test_alloc_driver_phase2.py  test_alloc_kink.py  test_alloc_kink_gradient.py  test_az_loop.py  test_bench_common_collect_pool.py  test_bench_common_window_pool.py  test_bench_fit_estimate_phase3.py  test_bench_futex_wake_tmsg_reclassification.py  test_bench_g_core_cpp_gen_ceiling.py  test_bench_iota_t_row_grounding_classification.py  test_bench_lpd_cpp_leaf_count.py  test_bench_median_pin_estimate_phase3.py  test_bench_mpsc_shm_tmsg_reclassification.py  test_bench_r_gen_cpp_gen_ceiling.py  test_bench_tmsg_codec_framing.py  test_config.py  test_cpp_runner.py  test_env_caches.py  test_estimate_contract.py  test_feature_layout.py  test_hp_registry.py  test_jax_equivalence.py  test_jax_f_equivalence.py  test_lowlatency.py  test_manifest_estimate_seam.py  test_method_a2c.py  test_method_backpressure.py  test_method_bang_bang.py  test_method_contextual_bandit.py  test_method_dual_coalescing.py  test_method_independent_bandit.py  test_method_offline_awr.py  test_method_reinforce.py  test_method_spsa_threshold.py  test_method_tabular_q.py  test_method_threshold_bandit.py  test_method_token_bucket.py  test_method_vegas.py  test_method_whittle_rmab.py  (+20 more)
throughput-lab/: .gitignore  README.md  u.sh
throughput-lab/cpp/: CMakeLists.txt  boundary.hpp  boundary_coalescing.cpp  boundary_factory.cpp  boundary_net_evaluator.hpp  boundary_per_thread.cpp  cursor_slot.hpp  main.cpp  proc_domains.hpp  producer.cpp  producer.hpp  real_gen_smoke.cpp  real_producer.cpp  sched_wrap.cpp  wire.hpp  zmq_context.hpp  zmq_dealer.hpp
throughput-lab/fused_jax/: CMakeLists.txt  belief_batch_encode.cpp  belief_response_decode.cpp  belief_wire.hpp  belief_wire_test.cpp  featurize_predict.py  roundtrip_demo.py
tools/: cleanroom.py  event_merge.py  host_device_baseline.json  lint_host_device_transfers.py
(+480 files in other folders)
